--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,6 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <sa-root></sa-root>
+  <st-root></sa-root>
 </body>
 </html>
